RESOLVED FIXED 123934
[CSS Shapes] Image shape-outside with vertical gaps is handled incorrectly
https://bugs.webkit.org/show_bug.cgi?id=123934
Summary [CSS Shapes] Image shape-outside with vertical gaps is handled incorrectly
Hans Muller
Reported 2013-11-06 15:25:00 PST
Created attachment 216233 [details] Test case. When a line overlaps a shape-outside image that contains a vertical gap it's incorrectly laid out as if there's no overlap at all. The attached test case demonstrates this.
Attachments
Test case. (841 bytes, text/html)
2013-11-06 15:25 PST, Hans Muller
no flags
Patch (4.22 KB, patch)
2013-11-06 16:51 PST, Hans Muller
no flags
Hans Muller
Comment 1 2013-11-06 16:51:54 PST
Created attachment 216242 [details] Patch RasterShapeIntervals::getExcludedIntervals() was returning an empty list when the line overlapped any vertical gap in the image. This short-circuit had been mistakenly copied from getIncludedIntervals(), where it makes sense.
Andreas Kling
Comment 2 2013-11-07 18:31:38 PST
Comment on attachment 216242 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-11-07 19:48:53 PST
Comment on attachment 216242 [details] Patch Clearing flags on attachment: 216242 Committed r158898: <http://trac.webkit.org/changeset/158898>
WebKit Commit Bot
Comment 4 2013-11-07 19:48:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.