[CSS Shapes] Image shape-outside with vertical gaps is handled incorrectly https://bugs.webkit.org/show_bug.cgi?id=123934

Reviewed by Andreas Kling.

Source/WebCore:

RasterShapeIntervals::getExcludedIntervals() was returning an empty
list when the line overlapped any vertical gap in the image. This short-circuit
had been mistakenly copied from getIncludedIntervals(), where it makes sense.

Test: fast/shapes/shape-outside-floats/shape-outside-floats-image-vgap.html

* rendering/shapes/RasterShape.cpp:
(WebCore::RasterShapeIntervals::getExcludedIntervals):

LayoutTests:

* fast/shapes/shape-outside-floats/shape-outside-floats-image-vgap-expected.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-floats-image-vgap.html: Added.


Canonical link: https://commits.webkit.org/142205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158898 268f45cc-cd09-0410-ab3c-d52691b4dbfc